--- a/client/src/components/MealList/Food/Food.module.css
+++ b/client/src/components/MealList/Food/Food.module.css
@@ -1,6 +1,37 @@
 .container {
     height: 20%;
-    width: 90;
+    width: 100%;
 
-    background-color: yellow;
+    background-color: white;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    margin-top: 2px
+}
+
+.name_container {
+    height: 100%;
+    width: 20%;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+
+    font-size: 5px;
+}
+
+.stats_container {
+    height: 100%;
+    width: 80%;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+
+    font-size: 5px;
 }
