--- a/client/src/components/MealList/Food/Food.module.css
+++ b/client/src/components/MealList/Food/Food.module.css
@@ -1,17 +1,25 @@
 .container {
-    height: 20%;
-    width: 100%;
+    height: 80%;
+    width: 30%;
 
     background-color: white;
 
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     text-align: center;
 
-    margin-top: 2px
-}
+    /* display: grid;
+    grid-template-columns: 7fr 3fr;
+    grid-template-rows: 5fr 5fr;
+    grid-template-areas: 
+    "name cals"
+    " card_CRUD"
+    ; */
 
+    margin-left: 10px;
+}
+/* 
 .name_container {
     height: 100%;
     width: 20%;
@@ -28,10 +36,45 @@
     height: 100%;
     width: 80%;
 
+    flex-direction: column;
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-align: center;
 
     font-size: 5px;
+} */
+
+.left_container {
+    height: 100%;
+    width: 70%;
+
+    flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.right_container {
+    height: 100%;
+    width: 30%;
+    font-size: 5px;
+
+    flex-direction: column;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.right_smaller_data_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.right_smaller_data_container {
+    font-size: 2px;
 }
