--- a/client/src/components/MealList/Meal/MealInDay.module.css
+++ b/client/src/components/MealList/Meal/MealInDay.module.css
@@ -1,5 +1,5 @@
 .container {
-    height: 15%;
+    height: 30%;
     width: 100%;
 
     background-color: var(--lightblue);
@@ -7,14 +7,36 @@
     margin-top: 10px;
     margin-bottom: 5px;
 
-    padding-right: 5px;
-    padding-bottom: 55px;
-    padding-left: 8px;
-
     border-radius: 10px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
 }
 
-.headers_container {
+.foods_container {
+    height: 100%;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.btn_container {
+    height: 100%;
+    width: 10%;
+
+    flex-direction: column;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+
+
+}
+/* .headers_container {
     height: 100%;
     width: 100%;
     background-color: var(--grey);
@@ -35,4 +57,4 @@
     text-align: center;
 
     font-size: 8px;
-}
+} */
