Foodlist now has components

--- a/client/src/components/FoodList/FoodList.module.css
+++ b/client/src/components/FoodList/FoodList.module.css
@@ -3,4 +3,7 @@
     width: 35vw;
 
     background-color: var(--lighterblue);    
+     display: flex;
+    justify-content: space-around;
+    text-align: center;
 }
