--- a/client/src/components/MealList/FormsAndModals/DeleteModal.module.css
+++ b/client/src/components/MealList/FormsAndModals/DeleteModal.module.css
@@ -1,8 +1,14 @@
 .container {
+    height: 10vh;
+    width: 10vw;
+    
+    background-color: var(--lightblue);
+
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
+
 }
 
 
