--- a/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
+++ b/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
@@ -1,6 +1,45 @@
 .container {
+    height: 60vh;
+    width: 40vw;
+
+    background-color: var(--lightblue);
+
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
+}
+
+.form {
+    height: 100%;
+    width: 100%;
+}
+
+.title_container {
+    height: 10%;
+    width: 100%;
+
+    background-color: var(--grey);
+}
+
+.existing_food_container {
+    height: 20%;
+    width: 100%;
+
+    flex-direction: column;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+
+    border-bottom: 3px solid black;
+}
+
+.add_field {
+    width: 100%;
+}
+
+.create_new_food_container {
+    height: 60%;
+    width: 100%;
 }
