--- a/client/src/components/MealList/Meal/MealInDay.module.css
+++ b/client/src/components/MealList/Meal/MealInDay.module.css
@@ -13,13 +13,15 @@
     justify-content: space-around;
     align-items: center;
     text-align: center;
+
+    overflow-y: auto;
 }
 
 .foods_container {
     height: 100%;
     width: 90%;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     text-align: center;
 }
