--- a/client/src/components/MealList/Meal/FoodInMeal.module.css
+++ b/client/src/components/MealList/Meal/FoodInMeal.module.css
@@ -1,6 +1,6 @@
 .container {
     height: 45%;
-    width: 175px;
+    width: 185px;
 
     background-color: white;
 
@@ -20,12 +20,7 @@
     margin-left: 10px; 
 }
 
-.food_name {
-    height: 100%;
-    width: 100%;
-    font-size: 15px;
-    overflow-wrap: break-word;
-}
+
 
 /* 
 .name_container {
@@ -53,15 +48,31 @@
     font-size: 5px;
 } */
 
+.title_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .left_container {
-    height: 100%;
-    width: 70%;
+    height: 95%;
+    width: 65%;
 
     flex-direction: column;
     display: flex;
     justify-content: space-between;
     align-items: center;
     text-align: center;
+}
+
+.food_name {
+    height: 100%;
+    width: 100%;
+    font-size: 14px;
+    overflow-wrap: break-word;
+
+    
 }
 
 .btn_container {
@@ -81,7 +92,7 @@
 
 .right_container {
     height: 100%;
-    width: 30%;
+    width: 35%;
     font-size: 5px;
 
     flex-direction: column;
