--- a/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
+++ b/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
@@ -1,5 +1,5 @@
 .container {
-    height: 60vh;
+    height: 80vh;
     width: 40vw;
 
     background-color: var(--lightblue);
@@ -44,4 +44,16 @@
     width: 100%;
 
     border-bottom: 3px solid black;
+}
+
+
+.newIngActualAmount {
+    width: 40px
+}
+
+.potentialNewIng {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
