--- a/client/src/components/FoodList/FoodInFoodList.module.css
+++ b/client/src/components/FoodList/FoodInFoodList.module.css
@@ -1,6 +1,6 @@
 .container {
-    height: 20%;
-    width: 45%;
+    height: 5%;
+    width: 95%;
 
     background-color: white;
 
@@ -20,46 +20,30 @@
     margin-left: 10px;
     margin-top: 5px;
 }
-/* 
-.name_container {
-    height: 100%;
-    width: 20%;
 
+
+.title_container{
+    height: 100%;
+    width: 30%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     text-align: center;
-
-    font-size: 5px;
 }
 
 .stats_container {
     height: 100%;
-    width: 80%;
-
-    flex-direction: column;
+    width: 60%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-align: center;
 
-    font-size: 5px;
-} */
-
-.left_container {
-    height: 100%;
-    width: 70%;
-
-    flex-direction: column;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
 }
 
 .btn_container {
-    height: 50%;
-    width: 100%;
+    height: 100%;
+    width: 10%;
 
     display: flex;
     justify-content: space-around;
@@ -67,25 +51,5 @@
     text-align: center;
 }
 
-.right_container {
-    height: 100%;
-    width: 30%;
-    font-size: 5px;
 
-    flex-direction: column;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-}
 
-.right_smaller_data_container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-}
-
-.right_smaller_data_container div {
-    font-size: 1px;
-}
