--- a/client/src/components/FoodList/FoodList.module.css
+++ b/client/src/components/FoodList/FoodList.module.css
@@ -2,9 +2,35 @@
     height: 82vh;
     width: 35vw;
 
-    background-color: var(--lighterblue);    
-    
     display: flex-wrap;
     justify-content: space-around;
     text-align: center;
+
+    border-radius: 10px 10px 0px 0px;
+    box-shadow: -2px 2px 10px grey;
+}
+
+.foodList_header {
+    height: 8%;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    background-color: var(--blue);
+    color: white;
+    border-radius: 10px 10px 0px 0px;
+    font-size: 20px;
+}
+
+.searchBar_container {
+    height: 5%;
+    width: 100%;
+}
+
+.foodList {
+    height: 87%;
+    width: 100%;
 }
