Did some css, now meal list and food list loads properly.

--- a/client/src/components/MealList/Meal/FoodInMeal.module.css
+++ b/client/src/components/MealList/Meal/FoodInMeal.module.css
@@ -49,6 +49,9 @@
 } */
 
 .title_container {
+    height: 70%;
+    width: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,6 +75,10 @@
     font-size: 14px;
     overflow-wrap: break-word;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     
 }
 
