--- a/client/src/components/FoodList/FoodInFoodList.module.css
+++ b/client/src/components/FoodList/FoodInFoodList.module.css
@@ -1,11 +1,9 @@
 .container {
     height: 5%;
-    width: 95%;
-
-    background-color: white;
+    width: 100%;
 
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     text-align: center;
 
@@ -17,28 +15,42 @@
     " card_CRUD"
     ; */
 
-    margin-left: 10px;
     margin-top: 5px;
 }
 
 
 .title_container{
     height: 100%;
-    width: 30%;
+    width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
 
+.stats {
+    height: 100%;
+    width: 20%;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
 .stats_container {
     height: 100%;
-    width: 60%;
+    width: 70%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-align: center;
 
+}
+
+.button {
+    height: 50%;
+    width: 50%;
 }
 
 .btn_container {
@@ -50,6 +62,8 @@
     align-items: center;
     text-align: center;
 }
+
+
 
 
 
