--- a/client/src/components/FoodList/SearchBar.module.css
+++ b/client/src/components/FoodList/SearchBar.module.css
@@ -3,6 +3,7 @@
     width: 100%;
 
     display: flex;
+    border-top: 2px solid black;
     border-bottom: 2px solid black;
     padding-left: 5px;
     padding-right: 5px;
