--- a/client/src/components/MealList/Meal/MealList.module.css
+++ b/client/src/components/MealList/Meal/MealList.module.css
@@ -27,6 +27,15 @@
     text-align: center;
 }
 
+.meal {
+    height: 30%;
+    width: 100%;
+    min-height: 30%;
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .mealList_container {
     height: 95%;
     width: 100%;
@@ -34,7 +43,7 @@
 
     flex-direction: column;
     display: flex;
-    align-items: center;  
-    text-align: center;   
+    align-items: center;
+    text-align: center;
     overflow-y: auto;
 }
