--- a/client/src/components/MealList/FormsAndModals/DeleteModal.module.css
+++ b/client/src/components/MealList/FormsAndModals/DeleteModal.module.css
@@ -1,20 +1,57 @@
 .container {
-    height: 10vh;
-    width: 10vw;
-    
-    background-color: var(--lightblue);
+    height: 300px;
+    width: 400px;
+
+    background-color: white;
 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
 
+    border-radius: 5px;
+    box-shadow: -2px 2px 10px grey;
 }
 
+.icon_container {
+    height: 50%;
+    width: 100%;
 
-.btn_container {
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-align: center;
+}
+
+.warning_icon {
+    height: 100%;
+    width: 100%;
+    color: var(--lightyellow);
+}
+
+.warning_message_container {
+    height: 30%;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.warning_message {
+    font-size: 20px;
+}
+
+.btn_container {
+    height: 20%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
+.btn btn-primary {
+    font-size: 20px
 }
