FE adding food fully works now I think.

--- a/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
+++ b/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
@@ -101,6 +101,13 @@
     border: 1px solid black;
 }
 
+.add_field_error {
+    color: red;
+
+    margin-top: -5px;
+    font-size: 12px;
+}
+
 .create_new_food_container {
     width: 100%;
 }
