--- a/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
+++ b/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
@@ -23,22 +23,6 @@
     transform: scale(2.5);
 }
 
-.form {
-    height: 100%;
-    width: 100%;
-    flex-direction: column;
-    display: flex;
-    justify-content: top;
-    align-items: center;
-    text-align: center;
-    overflow-y: auto;
-}
-
-.form_container {
-    height: 100%;
-    width: 80%;
-}
-
 .title_container {
     height: 8%;
     min-height: 8%;
@@ -57,11 +41,28 @@
     color: white;
 }
 
+.form {
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    display: flex;
+    justify-content: top;
+    align-items: center;
+    text-align: center;
+    overflow-y: auto;
+}
+
+.form_container {
+    height: 100%;
+    width: 80%;
+}
+
 .sub_title {
     position: relative;
     display: flex;
     justify-content: left;
     font-size: 16px;
+    margin-bottom: 5px;
 }
 
 .sub_title::before {
@@ -76,9 +77,7 @@
 }
 
 .existing_food_container {
-    height: 25%;
     min-height: 25%;
-
     width: 100%;
 
     flex-direction: column;
@@ -91,21 +90,13 @@
     font-size: 14px;
     display: flex;
     justify-content: left;
-    margin-top: 3px;
 }
+
 .add_field {
     height: 25px;
     font-size: 16px;
     width: 100%;
-    margin-bottom: 10px;
     border: 1px solid black;
-}
-
-.add_field_error {
-    color: red;
-
-    margin-top: -5px;
-    font-size: 12px;
 }
 
 .create_new_food_container {
@@ -166,17 +157,19 @@
 .stats_display_toggle {
     position: absolute;
     left: 190px;
-    transform: scale(2)
+    transform: scale(2);
 }
 
 .btn_container {
+    min-height: 10%;
+    height: 10%;
     width: 100%;
-    padding-bottom: 10px;
+
+    margin-top: 10px;
 }
 
 .btn btn-primary {
     height: 100%;
     width: 100%;
-
     font-size: 20px;
 }
