--- a/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
+++ b/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
@@ -1,5 +1,6 @@
 .container {
-    height: 600px;
+    height: auto;
+    max-height: 600px;
     width: 500px;
 
     background-color: white;
@@ -24,8 +25,8 @@
 }
 
 .title_container {
-    height: 8%;
-    min-height: 8%;
+    height:48px;
+    min-height: 48px;
 
     width: 100%;
 
@@ -94,8 +95,9 @@
 
 .add_field {
     height: 25px;
-    font-size: 16px;
     width: 100%;
+
+    font-size: 16px;
     border: 1px solid black;
 }
 
@@ -166,6 +168,7 @@
     width: 100%;
 
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .btn btn-primary {
