--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,34 @@
 :root {
-    --lighterblue: #dfefff;
-    --lightblue:  lightblue;
-    --blue: rgb(42, 42, 158);
-    --lightyellow: hsl(39, 100%, 62%);
-    /* --lighttblue: lightblue; */
+    font-family: Arial, Helvetica, sans-serif;
 
-    --grey: rgb(189, 189, 189);
-    --lightgrey: rgb(243, 243, 243);
+    --bluegrey: #447186;
+    --primarygreen: #48cf95;
 
-    --lightgreen: rgb(130, 228, 130);
-    font-family: Arial, Helvetica, sans-serif; 
+    --verydarkturquoise: #1e3f4c;
+    --darkturquoise: #2b7780;
+    --turquoise: #43c1c5;
 
-    --header-darkgreen: #1E3F4C;
-    --meal-top-background: #51E0C9;
-    --meal-bottom-background: #4AD1C0;
+    --verylightgrey: #f2f2f2;
+    --lightgrey: #f1f1f1;
+    --grey: #bdbdbd;
+    --header-title-two: #27d095;
 
-    --meal-text-color: #4AD1C0;
+    --meal-top-background: #51e0c9;
+    --meal-bottom-background: #4ad1c0;
 
+}
+
+::-webkit-scrollbar {
+    height: 90%;
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(151, 151, 151);
+    border-radius: 25px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(99, 99, 99);
+    border-radius: 25px;
 }
