--- a/client/src/components/MealList/Meal/MealList.module.css
+++ b/client/src/components/MealList/Meal/MealList.module.css
@@ -1,11 +1,15 @@
 .container {
-    height: 82vh;
+    height: 96%;
+    min-height: 96%;
+    max-height: 96%;
     width: 55vw;
-
+}
+.content_container {
+    height: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    width: 55vw;
     flex-direction: column;
-
-    border-radius: 10px 10px 0px 0px;
-    box-shadow: -2px 2px 10px grey;
 }
 
 .title_container {
@@ -17,34 +21,58 @@
     align-items: center;
     text-align: center;
 
-    background-color: var(--blue);
+    position: relative;
+
     color: white;
-    border-radius: 10px 10px 0px 0px;
     font-size: 20px;
 }
 
-.left_btn,
-.right_btn {
-    height: 70%;
-    width: 10%;
+.title {
+    position: absolute;
+    left: 20px;
+    color: var(--verydarkturquoise);
+    font-weight: 700;
+    font-size: 20px;
+    margin-left: 16px;
+}
+
+.day_container {
+    height: 100%;
+    width: 30%;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
+.btn_container {
+    height: 50%;
+    width: 14%;
+
+    background: var(--bluegrey);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+
+    border-radius: 4px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .dayName_container {
-    height: 100%;
-    width: 80%;
+    height: 50%;
+    width: 70%;
 
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-}
 
-.meal {
-    height: 30%;
-    width: 100%;
-    min-height: 30%;
+    background: var(--primarygreen);
 
-    margin-top: 15px;
+    border-radius: 6px;
 }
 
 .mealList_container {
@@ -56,6 +84,23 @@
     align-items: center;
     text-align: center;
     overflow-y: auto;
+}
+
+.inner_container {
+    height: 100%;
+    width: 96%;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+.meal {
+    height: 30%;
+    width: 100%;
+    min-height: 30%;
+
+    margin-bottom: 15px;
 }
 
 .total_stats_container {
