--- a/client/src/components/FoodList/FoodInFoodList.module.css
+++ b/client/src/components/FoodList/FoodInFoodList.module.css
@@ -1,69 +1,91 @@
 .container {
-    height: 5%;
+    height: 100%;
+    width: 90%;
+
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    margin-top: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 5px 15px var(--grey);
+}
+
+.title_container {
+    height: 40%;
     width: 100%;
-
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
 
-    /* display: grid;
-    grid-template-columns: 7fr 3fr;
-    grid-template-rows: 5fr 5fr;
-    grid-template-areas: 
-    "name cals"
-    " card_CRUD"
-    ; */
-
-    margin-top: 5px;
+    background: var(--lightgrey);
+    border-radius: 10px;
 }
 
+.food_name {
+    font-size: 13px;
+    padding-left: 10px;
+}
 
-.title_container{
-    height: 100%;
-    width: 20%;
+.given_amount {
+    font-size: 13px;
+    font-weight: 700;
+    color: var(--turquoise);
+    padding-right: 10px;
+}
+.content_container {
+    height: 60%;
+    width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.stats {
-    height: 100%;
-    width: 20%;
-
-    display: flex;
-    justify-content: space-around;
     align-items: center;
     text-align: center;
 }
 
 .stats_container {
     height: 100%;
-    width: 70%;
+    width: 80%;
+
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-align: center;
-
 }
 
-.button {
-    height: 50%;
-    width: 50%;
+.stats_odd {
+    color: var(--turquoise);
+}
+
+.stats_even {
+    color: black;
+}
+
+.stats_odd,
+.stats_even {
+    height: 100%;
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    font-size: 16px;
 }
 
 .btn_container {
     height: 100%;
-    width: 10%;
+    width: 20%;
 
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     text-align: center;
 }
 
-
-
-
-
+.button {
+    height: 40%;
+    width: 40%;
+}
