--- a/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
+++ b/client/src/components/MealList/FormsAndModals/AddFoodForm.module.css
@@ -15,6 +15,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    z-index: 1;
 }
 .close_btn {
     position: absolute;
@@ -25,12 +27,12 @@
 }
 
 .title_container {
-    height:48px;
+    height: 48px;
     min-height: 48px;
 
     width: 100%;
 
-    background-color: var(--blue);
+    background-color: var(--verydarkturquoise);
     display: flex;
     justify-content: space-around;
     align-items: center;
