--- a/client/src/components/MealList/FormsAndModals/DeleteModal.module.css
+++ b/client/src/components/MealList/FormsAndModals/DeleteModal.module.css
@@ -1,5 +1,5 @@
 .container {
-    height: 300px;
+    height: auto;
     width: 400px;
 
     background-color: white;
@@ -9,13 +9,19 @@
     transform: translate(-50%, -50%);
     position: absolute;
 
+    flex-direction: column;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+
     border-radius: 5px;
     box-shadow: -2px 2px 10px grey;
 }
 
 .icon_container {
-    height: 50%;
-    width: 100%;
+    height: 150px;
+    width: 150px;
 
     display: flex;
     justify-content: space-around;
@@ -50,8 +56,11 @@
     justify-content: space-around;
     align-items: center;
     text-align: center;
+
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .btn btn-primary {
-    font-size: 20px
+    font-size: 20px;
 }
