--- a/client/src/components/MealList/FormsAndModals/EditFoodForm.module.css
+++ b/client/src/components/MealList/FormsAndModals/EditFoodForm.module.css
@@ -15,6 +15,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+
+    z-index: 100;
 }
 .close_btn {
     position: absolute;
@@ -30,7 +32,7 @@
 
     width: 100%;
 
-    background-color: var(--blue);
+    background-color: var(--verydarkturquoise);
     display: flex;
     justify-content: space-around;
     align-items: center;
