--- a/client/src/components/MealList/Meal/MealList.module.css
+++ b/client/src/components/MealList/Meal/MealList.module.css
@@ -2,9 +2,10 @@
     height: 96%;
     min-height: 96%;
     max-height: 96%;
-    width: 55vw;
+    width: 60vw;
 }
-.content_container {
+
+.inner_container {
     height: 100%;
     min-height: 100%;
     max-height: 100%;
@@ -13,7 +14,7 @@
 }
 
 .title_container {
-    height: 8%;
+    height: 9%;
     width: 100%;
 
     display: flex;
@@ -76,7 +77,7 @@
 }
 
 .mealList_container {
-    height: 84%;
+    height: 78%;
     width: 100%;
 
     flex-direction: column;
@@ -95,47 +96,94 @@
     text-align: center;
 }
 
-.meal {
-    height: 30%;
+.meal_container {
+    height: 31%;
+    min-height: 31%;
     width: 100%;
-    min-height: 30%;
 
     margin-bottom: 15px;
 }
 
 .total_stats_container {
-    height: 8%;
+    height: 6%;
     width: 100%;
 
-    background-color: var(--blue);
+    position: relative;
 
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: end;
     align-items: center;
     text-align: center;
 
     font-size: 20px;
-    color: white;
 }
 
-.total_stats_description,
+.total_stats_inner_container {
+    height: 30px;
+    width: 60%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.total_stats {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    background: white;
+
+    border-radius: 10px;
+}
+
+.total_stats_description {
+    height: 30px;
+    width: auto;
+
+    position: absolute;
+    left: 14%;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+
+
 .stats {
     height: 100%;
-    width: 20%;
-    border-right: 2px solid turquoise;
+    width: 25%;
 
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-align: center;
+
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--verydarkturquoise);
 }
 
-.stats_last {
-    height: 100%;
-    width: 20%;
+.btn {
+    height: 30px;
+    width: 130px;
 
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
+    position: absolute;
+    right: 0;
+    background: var(--primarygreen);
+    border: 0;
+
+    border-radius: 5px;
+    font-size: 16px;
+    color: white;
+
+    margin-right: 20px;
 }
