--- a/client/src/components/MealList/Meal/MealListMeal.module.css
+++ b/client/src/components/MealList/Meal/MealListMeal.module.css
@@ -3,15 +3,15 @@
     width: 100%;
 
     background-color: var(--lightblue);
-    border-radius: 10px;
 
     flex-direction: column;
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-align: center;
-
-    overflow-y: auto;
+    
+    border-radius: 5px;
+    box-shadow: 0px 5px 15px var(--grey);
 }
 
 .title_container {
@@ -24,6 +24,7 @@
     text-align: center;
 
     background: white;
+    border-radius: 5px 5px 0px 0px;
 }
 
 .title {
@@ -77,7 +78,7 @@
 }
 
 .content_container {
-    height: 80%;
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -86,6 +87,11 @@
     text-align: center;
 
     position: relative;
+    overflow-y: auto;
+
+    background: linear-gradient(to bottom, var(--meal-top-background), var(--meal-bottom-background));
+
+    border-radius: 0px 0px 5px 5px;
 }
 
 .background_top,
@@ -110,32 +116,45 @@
 
 .foods_container {
     height: 100%;
-    width: 95%;
+    max-height: 100%;
+    width: 92%;
 
     display: flex;
+    justify-content: flex-start;
     align-items: center;
     text-align: center;
-    flex-wrap: wrap;
 
-    z-index: 1;
+    flex-wrap: wrap;
+}
+
+.food_container {
+    height: 100%;
+    width: 180px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+
+    margin-left: 10px;
+    border-radius: 10px;
 }
 
 .btn_container {
     height: 100%;
-    width: 5%;
+    width: 8%;
 
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 
-    z-index: 1;
 }
 
 .add_btn {
-    height: 80%;
-    width: 80%;
-    opacity: 70%;
+    height: 50%;
+    width: 50%;
+    opacity: 50%;
 }
 /* .headers_container {
     height: 100%;
