--- a/client/src/pages/UserPage.module.css
+++ b/client/src/pages/UserPage.module.css
@@ -2,7 +2,7 @@
     height: 93vh;
     width: 100vw;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     text-align: center;
 
