--- a/client/src/components/Auth/Register.module.css
+++ b/client/src/components/Auth/Register.module.css
@@ -30,7 +30,7 @@
 
     width: 100%;
 
-    background-color: var(--blue);
+    background-color: var(--verydarkturquoise);
     display: flex;
     justify-content: space-around;
     align-items: center;
