Stress test went ok...could be better. Would require a complete db redesign though...

--- a/client/src/components/FoodList/FoodInFoodList.module.css
+++ b/client/src/components/FoodList/FoodInFoodList.module.css
@@ -22,7 +22,7 @@
     text-align: center;
 
     background: var(--lightgrey);
-    border-radius: 10px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .food_name {
