--- a/client/src/components/MealList/Meal/MealList.module.css
+++ b/client/src/components/MealList/Meal/MealList.module.css
@@ -137,7 +137,8 @@
     align-items: center;
     text-align: center;
     background: white;
-
+    padding-left: 5px;
+    padding-right: 5px;
     border-radius: 10px;
 }
 
@@ -156,11 +157,9 @@
     font-weight: bold;
 }
 
-
-
-.stats {
+.stats_cals {
     height: 100%;
-    width: 25%;
+    width: 18%;
 
     display: flex;
     justify-content: space-around;
@@ -170,6 +169,44 @@
     font-size: 14px;
     font-weight: bold;
     color: var(--verydarkturquoise);
+}
+
+.stats_and_percentage {
+    height: 100%;
+    width: 27.3%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.stats {
+    /* height: 100%;
+    width: 20%;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center; */
+
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--verydarkturquoise);
+}
+
+.stats_percentage {
+    /* height: 100%;
+    width: 8.3%;
+
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    text-align: center; */
+
+    font-size: 14px;
+    font-weight: bold;
+    color: var(--primarygreen);
 }
 
 .btn {
